# MarsFormer-backend

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  cal.py  main.py  pyproject.toml  requirements.txt
zlw/: helper.py
zlw/contrib/qqw_bake_tangent/: bake_object.py  bake_tangent_inverse.py  offscreen_render.py  read_obj.py  render_mesh.py
zlw/contrib/zyh_topo_transfer/: obj.py  topology_transfer.py  utils.py
